force-app/main/default/objects/License__c/fields/Company_Access_Granted__c.field-meta.xml
<CustomField>
    <fullName>Company_Access_Granted__c</fullName>
    <label>Company Access Granted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>