force-app/main/default/objects/License__c/fields/Consumer_Access_NMLS__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Access_NMLS__c</fullName>
    <formula>CASE(License_Type__c, 

&quot;Branch&quot;, Branch__r.NMLS_Branch_ID__c, 

&quot;Individual&quot;,  Agent_Name__r.NMLS__c,

&quot;Company&quot;,  Agent_Name__r.Company_NMLS__c ,

Agent_Name__r.NMLS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumer Access NMLS</label>
    <type>Text</type>
</CustomField>