force-app/main/default/objects/License__c/fields/License_State__c.field-meta.xml
<CustomField>
    <fullName>License_State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License State</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>