force-app/main/default/objects/License__c/fields/NMLS_Company_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>NMLS_Company_Request_Form__c</fullName>
    <label>NMLS Company Request Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>