force-app/main/default/objects/License__c/fields/Sponsor_by_Separate_Entity__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_by_Separate_Entity__c</fullName>
    <label>Sponsor by Separate Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>