force-app/main/default/objects/License__c/fields/State_License_Status__c.field-meta.xml
<CustomField>
    <fullName>State_License_Status__c</fullName>
    <label>License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Deficiency</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Approved - Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Voluntarily Surrendered</fullName>
                <isActive>false</isActive>
                <label>Voluntarily Surrendered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>