force-app/main/default/objects/License__c/fields/State_Type__c.field-meta.xml
<CustomField>
    <fullName>State_Type__c</fullName>
    <label>State Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>