force-app/main/default/objects/License__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Agent_Name__c</columns>
    <columns>License_State__c</columns>
    <columns>NAME</columns>
    <columns>License_Number__c</columns>
    <columns>State_License_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>